# Platinum

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Platinum/: CMakeLists.txt  Platinum.h  Platinum_pch.h
Platinum/dependencies/metal-cpp/: README.md
Platinum/dependencies/metal-cpp/Metal/: MTLAccelerationStructureTypes.hpp  MTLCaptureScope.hpp  MTLDefines.hpp
Platinum/dependencies/metal-cpp/MetalFX/: MTLFXDefines.hpp  MTLFXSpatialScaler.hpp  MTLFXTemporalScaler.hpp
Platinum/dependencies/metal-cpp/QuartzCore/: CADefines.hpp  CAMetalDrawable.hpp  CAMetalLayer.hpp
Platinum/src/: Application.cpp  Application.h  Entry.h  Object.h  Renderer.h  Window.h
Platinum/src/event/: Event.h  KeyEvent.h  MouseEvents.h  WindowEvent.h
Platinum/src/platform/: CMakeLists.txt
Platinum/src/platform/apple/: CMakeLists.txt  MetalRenderer.h  MetalRenderer.mm  MetalWindow.h  MetalWindow.mm
Platinum/src/platform/apple/shaders/: CMakeLists.txt  triangle.metal
Sample/: CMakeLists.txt  Sample.cpp
